Working on Bluetooth Capability
Made several changes:

- Adding main Bluetooth code to MenuHome.java in onCreate function;
added imports, variables at top of file, and three helper functions just
under onCreate

- Added to AndroidManifest.xml line 15 and 16:
<uses-permission android:name="android.permission.BLUETOOTH" />
<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />

- Changed in values/strings_trans.xml:
<string name="MenuHome_titlebar">"PULSE"</string>

- main.xml:
Added ConnectButton and two EditText fields to test Bluetooth connection

<Button
android:text="Connect"
android:id="@+id/ButtonConnect"
android:layout_width="wrap_content"
android:layout_below="@+id/Welcometext"
android:layout_height="wrap_content" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="New Text"
android:id="@+id/labelStatusMsg"
android:layout_gravity="center_horizontal"
android:layout_weight="0.43" />

<EditText
android:id="@+id/labelRespRate"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="000"
android:layout_below="@+id/labelHeartRate"
android:layout_alignParentRight="true" />

--- a/res/values/strings_trans.xml
+++ b/res/values/strings_trans.xml
@@ -34,7 +34,7 @@
   <string name="Accuracy_miss">"Miss"</string>
   <string name="Accuracy_ok">"OK"</string>
   <string name="Accuracy_no_good">"No Good"</string>
-  <string name="MenuHome_titlebar">"Beats - Advanced Rhythm Game"</string>
+  <string name="MenuHome_titlebar">"PULSE"</string>
   <string name="MenuHome_legacy_warning">"Your phone is currently running Android 1.5 (Cupcake) or 1.6 (Donut), which do not fully support multi-touch capabilities. It is highly recommended you upgrade to 2.1 (Eclair) or higher. Beats can still run with single-touch but many stepfiles will be very difficult to play."</string>
   <string name="MenuHome_background_sync_warning">"Your phone currently has \"Background data\" enabled. Turning off \"Background data\" helps prevent other apps from causing Beats gameplay to lag. Alternatively, you can increase \"Application Priority\" in \"Advanced Settings\".\n\nDo you wish to change your \"Background data\" setting\? (Recommended to reduce lag)"</string>
   <string name="MenuHome_background_sync_undo">"You previously disabled your \"Background data\" setting. Would you like to update the setting now\?"</string>
