BioHarness Integration Complete
Bluetooth capability added as "connect" button on menu screen.
BioHarness breathing rate shown in menu screen directly under button for
testing.

Updates:

- Resolved bug on screen orientation change with
android:configChanges="orientation|keyboardHidden|screenSize">

- Added in values/strings_trans.xml:
<string name="Menu_connect">" Connect "</string>
<string name="status">" Bluetooth Status "</string>
<string name="initial0">" 000 "</string>

- Updated main.xml with text field for breathing rate

- in MenuHome.java:
- Added Bluetooth initialization to MenuHome.java in onCreate function,
main Bluetooth code in setupLayout function; added imports, variables at
top of file, and three helper functions just under onCreate()
- in updateLayout function added line to make Connect button similar
format to other buttons
formatMenuItem(((TextView) findViewById(R.id.ButtonConnect)),
R.string.Menu_connect);

--- a/res/values/strings_trans.xml
+++ b/res/values/strings_trans.xml
@@ -6,6 +6,9 @@
   <string name="Menu_download_songs">" download songs "</string>
   <string name="Menu_settings">" settings "</string>
   <string name="Menu_exit">" exit "</string>
+  <string name="Menu_connect">" Connect "</string>
+  <string name="status">" Bluetooth Status "</string>
+  <string name="initial0">" 000 "</string>
   <string name="Menu_auto">" auto "</string>
   <string name="Button_download">"Download"</string>
   <string name="Button_install">"Install"</string>
