--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -136,7 +136,7 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="0.19" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/labelRespRate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
