Modified GUI for BPM Goals with Victoria
Added switch statement in GUIGame.java, TextView in main.xml, and Goal
ENUMs in DataNotesData.java

Switch Statement:

class SpeedTask extends TimerTask {
public void run() {

respRate = MenuHome.bpm;
double resp = Double.parseDouble(respRate);

// Modify Speed Based on Breathing Rate
switch (Integer.parseInt(
Tools.getSetting(R.string.goalLevel, R.string.goalLevelDefault)
)) {
// GOAL: 6
case 0:
if(resp < 6.0){
h.fallpix_per_ms = 1.5;
}
else if(resp > 6 && resp < 8){
h.fallpix_per_ms = 2;
}
else if(resp > 8 && resp < 10){
h.fallpix_per_ms = 2.5;
}
else if(resp > 10 && resp < 12){
h.fallpix_per_ms = 3;
}
else if(resp > 12 && resp < 14){
h.fallpix_per_ms = 3.5;
}
else if(resp > 14 && resp < 16){
h.fallpix_per_ms = 4;
}
else {
h.fallpix_per_ms = 4.5;
}
break;
// GOAL: 8
case 1:
if(resp < 8.0){
h.fallpix_per_ms = 1.5;
}
else if(resp > 8 && resp < 10){
h.fallpix_per_ms = 2;
}
else if(resp > 10 && resp < 12){
h.fallpix_per_ms = 2.5;
}
else if(resp > 12 && resp < 14){
h.fallpix_per_ms = 3;
}
else if(resp > 14 && resp < 16){
h.fallpix_per_ms = 3.5;
}
else if(resp > 16 && resp < 18){
h.fallpix_per_ms = 4;
}
else {
h.fallpix_per_ms = 4.5;
}
break;
// GOAL: 10
case 2:
if(resp < 10.0){
h.fallpix_per_ms = 1.5;
}
else if(resp > 10 && resp < 12){
h.fallpix_per_ms = 2;
}
else if(resp > 12 && resp < 14){
h.fallpix_per_ms = 2.5;
}
else if(resp > 14 && resp < 16){
h.fallpix_per_ms = 3;
}
else if(resp > 16 && resp < 18){
h.fallpix_per_ms = 3.5;
}
else if(resp > 18 && resp < 20){
h.fallpix_per_ms = 4;
}
else {
h.fallpix_per_ms = 4.5;
}
break;
// GOAL: 12
case 3:
if(resp < 6.0){
h.fallpix_per_ms = 1.5;
}
else if(resp > 6 && resp < 8){
h.fallpix_per_ms = 2;
}
else if(resp > 8 && resp < 10){
h.fallpix_per_ms = 2.5;
}
else if(resp > 10 && resp < 12){
h.fallpix_per_ms = 3;
}
else if(resp > 12 && resp < 14){
h.fallpix_per_ms = 3.5;
}
else if(resp > 14 && resp < 16){
h.fallpix_per_ms = 4;
}
else {
h.fallpix_per_ms = 4.5;
}
break;
// GOAL: 14
case 4:
if

--- a/res/values/constants.xml
+++ b/res/values/constants.xml
@@ -49,6 +49,8 @@
 	<!-- Tweakable Settings -->
 	<string name="difficultyLevel">"difficultyLevel"</string>
 	<string name="difficultyLevelDefault">"2"</string>
+    <string name="goalLevel">"goalLevel"</string>
+    <string name="goalLevelDefault">"0"</string>
 	<string name="speedMultiplier">"speedMultiplier"</string>
 	<string name="speedMultiplierDefault">"2"</string>
 	<string name="autoStart">"autoStart"</string>
