--- a/res/values/strings_trans.xml
+++ b/res/values/strings_trans.xml
@@ -6,7 +6,7 @@
   <string name="Menu_download_songs">" download songs "</string>
   <string name="Menu_settings">" settings "</string>
   <string name="Menu_exit">" exit "</string>
-  <string name="Menu_connect">" Connect "</string>
+  <string name="Menu_connect">" connect "</string>
   <string name="status">" Bluetooth Status "</string>
   <string name="initial0">" 000 "</string>
   <string name="Menu_auto">" auto "</string>
