Keeps Running if not connected, no AutoPlay button, no speed mod in GUI, and changed settings screen
Fixed bug to keep it running if device not connected:

**IN onDraw():

//interval used for dynamic speed debugging/testing
protected static final long TIME_DELAY = 0;

//Java Timer class object declaration
Timer timer = new Timer();

//self-made function to set fallpix_per_ms speed variable within
Update()
class SpeedTask extends TimerTask {
public void run() {

respRate = MenuHome.bpm;
// Check that the device is connected
if (respRate != null) {
double resp = Double.parseDouble(respRate);
// Modify Speed Based on Breathing Rate
switch (Integer.parseInt(Tools.getSetting(R.string.goalLevel,
R.string.goalLevelDefault))) {
// GOAL: 6
case 0:
if (resp < 6.0) { h.fallpix_per_ms = 1.5; }
else if (resp > 6 && resp < 8) { h.fallpix_per_ms = 2; }
else if (resp > 8 && resp < 10) { h.fallpix_per_ms = 2.5; }
else if (resp > 10 && resp < 12) { h.fallpix_per_ms = 3; }
else if (resp > 12 && resp < 14) { h.fallpix_per_ms = 3.5; }
else if (resp > 14 && resp < 16) { h.fallpix_per_ms = 4; }
else { h.fallpix_per_ms = 4.5; }
break;

// GOAL: 8
case 1:
if (resp < 8.0) { h.fallpix_per_ms = 1.5; }
else if (resp > 8 && resp < 10) { h.fallpix_per_ms = 2; }
else if (resp > 10 && resp < 12) { h.fallpix_per_ms = 2.5; }
else if (resp > 12 && resp < 14) { h.fallpix_per_ms = 3; }
else if (resp > 14 && resp < 16) { h.fallpix_per_ms = 3.5; }
else if (resp > 16 && resp < 18) { h.fallpix_per_ms = 4; }
else { h.fallpix_per_ms = 4.5; }
break;

// GOAL: 10
case 2:
if (resp < 10.0) { h.fallpix_per_ms = 1.5; }
else if (resp > 10 && resp < 12) { h.fallpix_per_ms = 2; }
else if (resp > 12 && resp < 14) { h.fallpix_per_ms = 2.5; }
else if (resp > 14 && resp < 16) { h.fallpix_per_ms = 3; }
else if (resp > 16 && resp < 18) { h.fallpix_per_ms = 3.5; }
else if (resp > 18 && resp < 20) { h.fallpix_per_ms = 4; }
else { h.fallpix_per_ms = 4.5; }
break;

// GOAL: 12
case 3:
if (resp < 12.0) { h.fallpix_per_ms = 1.5; 

--- a/res/values/settings_trans.xml
+++ b/res/values/settings_trans.xml
@@ -99,8 +99,8 @@
   <string name="manualOGGOffsetDesc">"Manually adjust this if .ogg music is off-sync (I use -0.325s)"</string>
   <string name="showPercentTitle">"Display Percentage"</string>
   <string name="showPercentDesc">"Display percent instead of letter grade in scoreboard"</string>
-  <string name="showFPSTitle">"Show FPS"</string>
-  <string name="showFPSDesc">"Display current and average framerate (# of frames updates/sec)"</string>
+  <string name="showFPSTitle">"Show Breaths Per Minute"</string>
+  <string name="showFPSDesc">"Display breaths-per-minute at the top of game screen"</string>
   <string name="screenshotModeTitle">"Screenshot Mode"</string>
   <string name="screenshotModeDesc">"Enable this to take a screenshot when you pause the game"</string>
   <string name="backgroundFilteringTitle">"Background Filtering"</string>
