added rabbit and did some restructuring

--- a/res/values/arrays_const.xml
+++ b/res/values/arrays_const.xml
@@ -84,6 +84,7 @@
 		<item>blue</item>
 		<item>red</item>
 		<item>white</item>
+        <item>rabbit</item>
 	</string-array>
 	
 	<string-array name="backgroundBrightness">
