--- a/res/values/arrays_trans.xml
+++ b/res/values/arrays_trans.xml
@@ -36,6 +36,7 @@
     <item>Blue</item>
     <item>Red</item>
     <item>White</item>
+    <item>Rabbit</item>
   </string-array>
   <string-array name="orientation">
     <item>Landscape</item>
