--- a/res/values/constants.xml
+++ b/res/values/constants.xml
@@ -54,7 +54,7 @@
 	<string name="speedMultiplier">"speedMultiplier"</string>
 	<string name="speedMultiplierDefault">"2"</string>
 	<string name="autoStart">"autoStart"</string>
-	<string name="autoStartDefault">"1"</string>
+	<string name="autoStartDefault">"0"</string>
 	<string name="noteAppearance">"noteAppearance"</string>
 	<string name="noteAppearanceDefault">"0"</string>
 	<string name="dark">"dark"</string>
@@ -76,17 +76,17 @@
 	<string name="fullscreen">"fullscreen"</string>
 	<string name="fullscreenDefault">"0"</string>
 	<string name="backgroundShow">"backgroundShow"</string>
-	<string name="backgroundShowDefault">"1"</string>
+	<string name="backgroundShowDefault">"0"</string>
 	<string name="backgroundFiltering">"backgroundFiltering"</string>
 	<string name="backgroundFilteringDefault">"0"</string>
 	<string name="backgroundSong">"backgroundSong"</string>
-	<string name="backgroundSongDefault">"1"</string>
+	<string name="backgroundSongDefault">"0"</string>
 	<string name="backgroundBrightness">"backgroundBrightness"</string>
 	<string name="backgroundBrightnessDefault">"75"</string>
 	<string name="noteskin">"noteskin"</string>
 	<string name="noteskinDefault">"default"</string>
 	<string name="backgroundImage">"backgroundImage"</string>
-	<string name="backgroundImageDefault">"blue"</string>
+	<string name="backgroundImageDefault">"white  "</string>
 	<string name="orientation">"orientation"</string>
 	<string name="orientationDefault">"2"</string>
 	<string name="tapboxLayout">"tapboxLayout"</string>
