--- a/res/values/arrays_const.xml
+++ b/res/values/arrays_const.xml
@@ -21,7 +21,14 @@
 		<item>3</item>
 		<item>4</item>
 	</string-array>
-	
+
+    <string-array name="breathColorValues">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
 	<string-array name="speedMultiplier">
 		<item>1.00x</item>
 		<item>1.25x</item>
