--- a/res/values/constants.xml
+++ b/res/values/constants.xml
@@ -49,6 +49,8 @@
 	<!-- Tweakable Settings -->
 	<string name="difficultyLevel">"difficultyLevel"</string>
 	<string name="difficultyLevelDefault">"2"</string>
+    <string name="breathColor">"breathColor"</string>
+    <string name="breathColorDefault">"0"</string>
     <string name="goalLevel">"goalLevel"</string>
     <string name="goalLevelDefault">"0"</string>
 	<string name="speedMultiplier">"speedMultiplier"</string>
@@ -117,6 +119,8 @@
 	-->
 	<string name="showFPS">"showFPS"</string>
 	<string name="showFPSDefault">"1"</string>
+    <string name="showBreath">"showBreath"</string>
+    <string name="showBreathDefault">"0"</string>
 	<string name="screenshotMode">"screenshotMode"</string>
 	<string name="screenshotModeDefault">"0"</string>
 	<string name="syncDuration">"syncDuration"</string>
