--- a/res/values/arrays_const.xml
+++ b/res/values/arrays_const.xml
@@ -29,6 +29,10 @@
         <item>3</item>
     </string-array>
 
+    <string-array name="breathGoalValues">
+        <item>0</item>
+    </string-array>
+
 	<string-array name="speedMultiplier">
 		<item>1.00x</item>
 		<item>1.25x</item>
