--- a/res/values/arrays_trans.xml
+++ b/res/values/arrays_trans.xml
@@ -22,6 +22,9 @@
      <item>Green</item>
      <item>Blue</item>
     </string-array>
+  <string-array name="breathGoal">
+    <item>6 in / 4 out</item>
+    </string-array>
   <string-array name="randomize">
     <item>Off</item>
     <item>Static</item>
