--- a/res/values/arrays_trans.xml
+++ b/res/values/arrays_trans.xml
@@ -21,9 +21,12 @@
      <item>Red</item>
      <item>Green</item>
      <item>Blue</item>
+     <item>Yellow</item>
+     <item>Turquoise</item>
+     <item>Pink</item>
     </string-array>
   <string-array name="breathGoal">
-    <item>6 in / 4 out</item>
+    <item>4 in / 6 out</item>
     </string-array>
   <string-array name="randomize">
     <item>Off</item>
